--- a/app/src/main/res/layout/count_family.xml
+++ b/app/src/main/res/layout/count_family.xml
@@ -7,7 +7,7 @@
 
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/show_family"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="128dp"
@@ -17,16 +17,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@+id/water_family" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="우물  쭈물"
         android:textSize="40dp"
-        android:textStyle="normal"
+        android:fontFamily="@font/cafe24surround"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.008"
@@ -35,13 +34,13 @@
         app:layout_constraintVertical_bias="0.002" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/logo_waterdrop"
         android:layout_width="35dp"
         android:layout_height="46dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView4"
-        app:layout_constraintEnd_toEndOf="@+id/textView4"
-        app:layout_constraintStart_toStartOf="@+id/textView4"
-        app:layout_constraintTop_toTopOf="@+id/textView4"
+        app:layout_constraintBottom_toBottomOf="@+id/logo"
+        app:layout_constraintEnd_toEndOf="@+id/logo"
+        app:layout_constraintStart_toStartOf="@+id/logo"
+        app:layout_constraintTop_toTopOf="@+id/logo"
         app:srcCompat="@drawable/waterdrop" />
 
 
@@ -51,10 +50,9 @@
         android:layout_height="50dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/plus"
-        app:layout_constraintEnd_toStartOf="@+id/textView2"
+        app:layout_constraintEnd_toStartOf="@+id/show_family"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@+id/show_family" />
 
     <ImageButton
         android:id="@+id/minus_button"
@@ -65,25 +63,26 @@
         android:fontFamily="@font/cafe24surround"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintStart_toEndOf="@+id/show_family"
+        app:layout_constraintTop_toBottomOf="@+id/show_family" />
 
 
     <Button
+        android:id="@+id/save_family_count"
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:backgroundTint="#87CEEB"
         android:fontFamily="@font/cafe24surround"
         android:text="확인"
         android:textSize="25dp"
+        android:onClick="onSaveFamilyCountClicked"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/count_text" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/water_family"
         android:layout_width="300dp"
         android:layout_height="200dp"
         android:layout_marginTop="84dp"
@@ -104,7 +103,6 @@
         app:layout_constraintEnd_toStartOf="@+id/minus_button"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toEndOf="@+id/plus_button"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@+id/water_family" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
