--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -28,7 +28,7 @@
         android:layout_marginTop="100dp"
         android:fontFamily="@font/cafe24surround"
         android:textSize="20dp"
-        android:hint="아이디" />
+        android:hint="이메일" />
 
 
     <EditText
@@ -66,7 +66,7 @@
 
 
     <Button
-        android:id="@+id/signup_button"
+        android:id="@+id/goto_signup"
         android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
