--- a/app/src/main/res/layout/signup_layout.xml
+++ b/app/src/main/res/layout/signup_layout.xml
@@ -9,7 +9,7 @@
         android:layout_width="160dp"
         android:layout_height="70dp"
         android:layout_gravity="left"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/logo"/>
 
     <ImageView
         android:id="@+id/water_family"
@@ -26,32 +26,32 @@
         android:layout_gravity="center"
         android:layout_marginTop="100dp"
         android:fontFamily="@font/cafe24surround"
-        android:hint="아이디"
-        android:textSize="20dp" />
+        android:textSize="20dp"
+        android:hint="이메일" />
 
 
     <EditText
         android:id="@+id/create_user_PASSWARD"
         android:layout_width="300dp"
-        android:layout_height="50dp"
         android:layout_gravity="center"
+        android:layout_height="50dp"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/cafe24surround"
-        android:hint="비밀번호"
+        android:textSize="20dp"
         android:inputType="textPassword"
-        android:textSize="20dp" />
+        android:hint="비밀번호 (6자리 이상)" />
 
 
     <EditText
         android:id="@+id/check_user_PASSWARD"
         android:layout_width="300dp"
-        android:layout_height="50dp"
         android:layout_gravity="center"
+        android:layout_height="50dp"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/cafe24surround"
-        android:hint="비밀번호 확인"
+        android:textSize="20dp"
         android:inputType="textPassword"
-        android:textSize="20dp" />
+        android:hint="비밀번호 확인" />
 
 
     <Button
