--- a/app/src/main/res/layout/persondialog.xml
+++ b/app/src/main/res/layout/persondialog.xml
@@ -1,23 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    android:id="@+id/drawer"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation ="vertical"
-    tools:context = ".CountFamilyActivity">
+    tools:context = ".PersonEdit">
 
-
-
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start|left"
+        app:menu="@menu/menu_main" />
 
     <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-        android:id = "@+id/ll"
+        <include  layout="@layout/toolbar_main"
+            android:id ="@+id/toolbar"/>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:gravity="end"
+        android:padding="16dp">
+
+    <Button
+        android:id="@+id/confirm_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="확인"
+        android:layout_marginTop="500sp"
+        android:textSize="16sp"
+        android:backgroundTint="#87CEEB"
+        android:fontFamily="@font/cafe24surround"
+        android:textColor="@color/white"
+        />
+
+    </LinearLayout>
+    <LinearLayout
+
+        android:id="@+id/Person"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="100sp"
+        android:padding = "16dp">
 
     </LinearLayout>
 
 
-</LinearLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
