비밀번호 재설정 기능 추가

--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -25,7 +25,7 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="@font/cafe24surround"
         android:textSize="20dp"
         android:hint="이메일" />
@@ -48,11 +48,14 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
         android:backgroundTint="#87CEEB"
         android:fontFamily="@font/cafe24surround"
         android:textSize="30dp"
         android:text="로그인" />
+
+
+
 
     <TextView
         android:id="@+id/textView_1"
@@ -66,6 +69,18 @@
 
 
     <Button
+        android:id="@+id/goto_passwordReset"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="40dp"
+        android:backgroundTint="#87CEEB"
+        android:fontFamily="@font/cafe24surround"
+        android:textSize="20dp"
+        android:text="비밀번호 재설정"
+        />
+
+ <Button
         android:id="@+id/goto_signup"
         android:layout_width="200dp"
         android:layout_height="40dp"
