--- a/app/src/main/res/drawable/button3_pattern.xml
+++ b/app/src/main/res/drawable/button3_pattern.xml
@@ -3,12 +3,12 @@
     <item android:state_pressed="true" >
         <shape>
             <gradient
-                android:startColor="#C8E6A8"
-                android:endColor="#C8E6A8"
+                android:startColor="#B8DFF8"
+                android:endColor="#B8DFF8"
                 android:angle="270" />
             <stroke
                 android:width="2dp"
-                android:color="#C8E6A8" />
+                android:color="#B8DFF8" />
             <corners
                 android:radius="20dp" />
             <padding
@@ -25,12 +25,12 @@
     <item android:state_focused="true">
         <shape>
             <gradient
-                android:startColor="#C8E6A8"
-                android:endColor="#C8E6A8"
+                android:startColor="#B8DFF8"
+                android:endColor="#B8DFF8"
                 android:angle="270" />
             <stroke
                 android:width="2dp"
-                android:color="#C8E6C9" />
+                android:color="#B8DFF8" />
             <corners
                 android:radius="2dp" />
             <padding
@@ -46,12 +46,12 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#C8E6A8"
-                android:endColor="#C8E6A8"
+                android:startColor="#B8DFF8"
+                android:endColor="#B8DFF8"
                 android:angle="90" />
             <stroke
                 android:width="2dp"
-                android:color="#C8E6A8" />
+                android:color="#B8DFF8" />
             <corners
                 android:radius="20dp" />
             <padding
