--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,13 @@
             android:textSize="40sp"
             android:padding="20dp"/>
 
+        <Button
+            android:id="@+id/layout_test_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            />
+
 
 
     </LinearLayout>
