--- a/app/src/main/res/drawable/button1_pattern.xml
+++ b/app/src/main/res/drawable/button1_pattern.xml
@@ -3,12 +3,12 @@
     <item android:state_pressed="true" >
         <shape>
             <gradient
-                android:startColor="#FFECB3"
-                android:endColor="#FFECB3"
+                android:startColor="#BBE093"
+                android:endColor="#BBE093"
                 android:angle="270" />
             <stroke
                 android:width="2dp"
-                android:color="#FFECB3" />
+                android:color="#BBE093" />
             <corners
                 android:radius="20dp" />
             <padding
@@ -25,8 +25,8 @@
     <item android:state_focused="true">
         <shape>
             <gradient
-                android:startColor="#FFECB3"
-                android:endColor="#FFECB3"
+                android:startColor="#BBE093"
+                android:endColor="#BBE093"
                 android:angle="270" />
             <stroke
                 android:width="2dp"
@@ -46,12 +46,12 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#FFECB3"
-                android:endColor="#FFECB3"
+                android:startColor="#BBE093"
+                android:endColor="#BBE093"
                 android:angle="90" />
             <stroke
                 android:width="2dp"
-                android:color="#FFECB3" />
+                android:color="#BBE093" />
             <corners
                 android:radius="20dp" />
             <padding
