--- a/app/src/main/res/layout/check_wateruse.xml
+++ b/app/src/main/res/layout/check_wateruse.xml
@@ -52,7 +52,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="head : "
+            android:text="shower : "
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -88,7 +88,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="head"
+            android:text="shower"
             android:textColor="@color/black"
             android:textSize="15sp"
             android:fontFamily="@font/cafe24surround"
