--- a/app/src/main/res/layout/check_wateruse.xml
+++ b/app/src/main/res/layout/check_wateruse.xml
@@ -31,13 +31,13 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="sink : "
+            android:text="shower : "
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/id_sink"
+            android:id="@+id/id_head"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -52,13 +52,13 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="shower : "
+            android:text="sink : "
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/id_head"
+            android:id="@+id/id_sink"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -230,9 +230,18 @@
     </LinearLayout>
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="측정 단위는 mL(밀리리터)입니다. \n \n 측정 종료 버튼 클릭 시 메인화면으로 이동합니다."
+        android:textAlignment="textEnd"
+        android:textColor="#C8C9C7"
+        />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="10dp"
         android:layout_height="0dp"
         android:layout_weight="1.5"
         android:orientation="horizontal"
