--- a/app/src/main/res/layout/used_family.xml
+++ b/app/src/main/res/layout/used_family.xml
@@ -17,28 +17,55 @@
         android:layout_marginTop="50dp"
         />
 
-        <LinearLayout
-            android:layout_marginTop="30dp"
-            android:id="@+id/family_use_layout"
+    <LinearLayout
+        android:layout_marginTop="30dp"
+        android:id="@+id/family_use_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_weight="1">
+
+        <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:layout_weight="1">
+            android:layout_height="0dp"
+            android:layout_marginLeft="50dp"
+            android:layout_weight="1"
+            android:text="Button"
+            android:textSize="20sp"
+            android:textAlignment="textStart"
+            android:fontFamily="@font/cafe24surround"
+            >
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginLeft="50dp"
-                android:layout_weight="1"
-                android:text="Button"
-                android:textSize="20sp"
-                android:textAlignment="textStart"
-                android:fontFamily="@font/cafe24surround"
-                >
+        </Button>
 
-            </Button>
-
-
-        </LinearLayout>
     </LinearLayout>
+    <TextView
+        android:id="@+id/tv_ex"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="구성원의 정보가 다른가요?"
+        android:fontFamily="@font/cafe24surround"
+        android:textSize="20dp"
+        android:layout_marginTop="50dp"
+        android:textColor="#C8C9C7"
+        android:gravity="center_horizontal"
+        android:layout_weight="0.5"
+        >
+
+    </TextView>
+    <Button
+        android:id="@+id/back_countFamily_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#87CEEB"
+        android:fontFamily="@font/cafe24surround"
+        android:textSize="20sp"
+        android:layout_weight="0.5"
+        android:layout_gravity="center_horizontal"
+        android:text="구성원 정보 다시 입력하기"
+        >
+
+    </Button>
+
+</LinearLayout>
