--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -6,67 +6,82 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="10">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="일간 사용 그래프"
-        android:textAlignment="center"
-        android:layout_gravity="center"
-        android:textSize="40sp"
-        android:textStyle="bold"
-        android:fontFamily="@font/cafe24surround"
-        android:layout_marginTop="50dp" />
-
-    <TextView
-        android:id="@+id/tv_ex1"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="아래의 구성원을 클릭해주세요"
-        android:fontFamily="@font/cafe24surround"
-        android:textSize="20dp"
-        android:layout_marginTop="20dp"
-        android:textColor="#C8C9C7"
-        android:gravity="center_horizontal"
-        android:layout_weight="0.3" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="10">
 
-    <LinearLayout
-        android:layout_marginTop="30dp"
-        android:id="@+id/graph_textView_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:layout_weight="0.5" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="구성원 사용"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/cafe24surround"
+            android:layout_marginTop="50dp" />
 
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/daily_line_chart"
-        android:layout_width="match_parent"
-        android:layout_height="300dp" />
+        <LinearLayout
+            android:layout_marginTop="30dp"
+            android:id="@+id/graph_textView_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_weight="0.5" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="월간 사용 그래프"
-        android:textAlignment="center"
-        android:layout_gravity="center"
-        android:textSize="40sp"
-        android:textStyle="bold"
-        android:fontFamily="@font/cafe24surround"
-        android:layout_marginTop="50dp" />
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/daily_bar_chart"
+            android:layout_width="match_parent"
+            android:layout_height="400dp" />
+
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:id="@+id/user_text_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+    </LinearLayout>
+
+        <TextView
+            android:id="@+id/text_id1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="일간 사용 그래프"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/cafe24surround"
+            android:layout_marginTop="50dp" />
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/daily_line_chart"
+            android:layout_marginTop="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="400dp" />
 
 
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/monthly_line_chart"
-        android:layout_marginTop="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="300dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="월간 사용 그래프"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/cafe24surround"
+            android:layout_marginTop="50dp" />
 
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/monthly_line_chart"
+            android:layout_marginTop="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="500dp" />
 
-</LinearLayout>
+    </LinearLayout>
 </ScrollView>
