--- a/app/src/main/res/layout/check_wateruse.xml
+++ b/app/src/main/res/layout/check_wateruse.xml
@@ -31,7 +31,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="shower : "
+            android:text="샤워기 : "
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -52,7 +52,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="sink : "
+            android:text="세면대 : "
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -88,7 +88,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="shower"
+            android:text="샤워기"
             android:textColor="@color/black"
             android:textSize="15sp"
             android:fontFamily="@font/cafe24surround"
@@ -98,7 +98,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="sink"
+            android:text="세면대"
             android:textColor="@color/black"
             android:textSize="15sp"
             android:fontFamily="@font/cafe24surround"
